fixed logo size on mobile

--- a/Projects/9jafarm/css/styles.css
+++ b/Projects/9jafarm/css/styles.css
@@ -10178,6 +10178,9 @@ background: linear-gradient(to bottom, rgba(92, 77, 66, 0) 0%, rgba(0, 0, 0, 0.5
    .bg-right, .bg-left{
     padding: 1rem 1rem;
 }
+       img.logo {
+    width: 55px;
+}
 }
 
 #shop{
